public class AccidentException extends Exception {
}
