package Interface;

public interface Factory {

    public Iterable generate();
}
