package Vehicule;

import Interface.Vehicle;

public class Car extends Vehicle {

    public Car() {
        setSpeed(30F);
    }
}
