package Vehicule;

import Interface.Vehicle;

public class Moto extends Vehicle {

    public Moto() {
        setSpeed(20F);
    }
}
