package Vehicule;

import Interface.Vehicle;

public class Truck extends Vehicle {

    public Truck() {
        setSpeed(10F);
    }
}
