package main.Exception;

public class PanneException extends Throwable{

    public PanneException(String message){
        super(message);
    }
}
