@startuml

title __UQAC_POO_AVANCED's Class Diagram__\n

  namespace main {
    namespace Acces {
      class main.Acces.Acces {
      }
    }
  }
  

  namespace main {
    namespace Autoroute {
      class main.Autoroute.Autoroute {
      }
    }
  }
  

  namespace main {
    namespace Autoroute {
      class main.Autoroute.AutorouteController {
      }
    }
  }
  

  namespace main {
    namespace Autoroute {
      class main.Autoroute.AutorouteFactory {
      }
    }
  }
  

  namespace main {
    namespace Exception {
      class main.Exception.AccidentException {
      }
    }
  }
  

  namespace main {
    namespace Exception {
      class main.Exception.PanneException {
      }
    }
  }
  

  namespace main {
    class main.Idioroute {
    }
  }
  

  namespace main {
    namespace Interface {
      interface main.Interface.Factory {
      }
    }
  }
  

  namespace main {
    namespace Interface {
      abstract class main.Interface.Vehicle {
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.Car {
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.Moto {
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.Truck {
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.VehicleController {
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.VehicleFactory {
      }
    }
  }
  

  main.Autoroute.Autoroute o-- main.Acces.Acces : access
  main.Autoroute.AutorouteController o-- main.Vehicule.VehicleController : vehicleController
  main.Autoroute.AutorouteFactory .up.|> main.Interface.Factory
  main.Autoroute.AutorouteFactory o-- main.Acces.Acces : acces
  main.Vehicule.Car -up-|> main.Interface.Vehicle
  main.Vehicule.Moto -up-|> main.Interface.Vehicle
  main.Vehicule.Truck -up-|> main.Interface.Vehicle
  main.Vehicule.VehicleFactory .up.|> main.Interface.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
